Rutas cortas y largas OK - añade monumentos "restantes". - Hay que hacer lo de la pantalla intermedia con monumentos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name" translatable="false">VisitPath</string>
     <string name="monument_image_desc" translatable="false">Descripción de la imagen del monumento</string>
+    <string name="remove_icon">Eliminar</string>
 </resources>
