Rutas cortas y largas OK - añade monumentos "restantes". - Pantalla intermedia monumentos para rutas cortas OK - Genera las rutas cortas OK hasta ordenadas bien. Desde Favoritos no se puede generar rutas. + rutas correctas a pie o en coche.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name" translatable="false">VisitPath</string>
     <string name="monument_image_desc" translatable="false">Descripción de la imagen del monumento</string>
     <string name="remove_icon">Eliminar</string>
+    <string name="no_results_text">No se encontraron resultados. Intenta modificar los filtros.</string>
+    <string name="no_results_image">Sin resultados</string>
+
 </resources>
