Rutas cortas y largas OK. Versión entregable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="remove_icon">Eliminar</string>
     <string name="no_results_text">No se encontraron resultados. Intenta modificar los filtros.</string>
     <string name="no_results_image">Sin resultados</string>
+    <string name="open_google_maps">Abrir con Google Maps</string>
 
 </resources>
